--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "firebase": "^7.23.0",
     "sass-resources-loader": "^2.1.1",
     "vue": "^2.6.12",
+    "vue-browser-geolocation": "^1.8.0",
     "vue-material": "^1.0.0-beta-15",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
