--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass-resources-loader": "^2.1.1",
     "vue": "^2.6.12",
     "vue-browser-geolocation": "^1.8.0",
+    "vue-js-modal": "^2.0.0-rc.6",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.2.0",
     "vue2-google-maps": "^0.10.7"
