--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-js-modal": "^2.0.0-rc.6",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.2.0",
+    "vue-textarea-autosize": "^1.1.1",
     "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
