--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-API_KEY_GEOCODE=AIzaSyDtW6-qLuwkhUjmDiYTVwg_dF-tcg0jjuQ
+VUE_APP_GEOCODE_KEY=AIzaSyDtW6-qLuwkhUjmDiYTVwg_dF-tcg0jjuQ
+
+VUE_APP_FIREBASE_KEY="AIzaSyDXN5YMLorHKmbdEpT6DH1M9SJCIa8iUM"
