--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-js-modal": "^2.0.0-rc.6",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.2.0",
+    "vue-simple-alert": "^1.1.1",
     "vue-textarea-autosize": "^1.1.1",
     "vue-uid": "^0.4.5",
     "vue-uuid": "^2.0.2",
