add user location to tree distance converter

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules
 /dist
 firebase.js
 geocoder.js
+X-Old-React-Project
 
 
 # local env files
@@ -28,3 +29,7 @@ pnpm-debug.log*
 package-lock.json
 
 package.json
+
+X-Old-React-Project/.expo-shared/assets.json
+
+X-Old-React-Project/actions/sessions.js
